# code-gallery

.github/workflows/: linux.yml
goal_oriented_elastoplasticity/: Cantiliver_II_beam_3d.prm  Thick_tube_internal_pressure.prm
parallel_hp_matrixfree/: .clang-format  CMakeLists.txt  Readme.md
parallel_hp_matrixfree/application/: poisson.cc
parallel_hp_matrixfree/doc/: author  builds-on  dependencies  entry-name  tooltip
parallel_hp_matrixfree/include/adaptation/: base.h  factory.h  h.h  hp_fourier.h  hp_history.h  hp_legendre.h  parameter.h
parallel_hp_matrixfree/include/functions/: reentrant_corner.h
parallel_hp_matrixfree/source/adaptation/: h.cc  hp_fourier.cc  hp_history.cc  hp_legendre.cc
parallel_hp_matrixfree/source/functions/: reentrant_corner.cc
parallel_matrixfree_hp/: CMakeLists.txt  Readme.md
parallel_matrixfree_hp/doc/: entry-name  tooltip
